<resources>
    <string name="app_name">Easy Share</string>
    <string name="action_settings">Settings</string>

    <string name="send">Send</string>
    <string name="receive">Receive</string>

    <string name="select_file">Select File</string>

    <string name="waiting">Waiting for incoming connections...</string>
    <string name="client_connected">Accepted Connection</string>
    <string name="transfer_in_progress">Transfering file...</string>
    <string name="make_sure_same_network">Make sure both the receiver and sender are on the same network.</string>
    <string name="read">Read Code</string>
    <string name="error_taking_pic">Error taking the picture, please try again</string>
    <string name="could_not_setup_detector">Couldn\'t setup the detector, please try again</string>
    <string name="scan_this">Scan this barcode with Easy Share to transfer the file</string>
    <string name="file_transfer_complete">The file has been copied to the other device</string>
    <string name="transferring_files">Trasferring files</string>
    <string name="error_transferring">Error transferring the file</string>
    <string name="success">Success, the file was transferred!</string>
    <string name="nfc_desc">1. Make sure NFC is enabled in both devices\n2.Bring the devices back to back\n3.Tap on the sender\'s screen</string>
    <string name="no_nfc_detected">This device doesn\'t have NFC available</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="share_files">Share Files</string>
    <string name="share_hotspot_nfc">Share Hotspot via NFC</string>
    <string name="share_hotspot_wifi">Share Hotspot via Wifi</string>
    <string name="ssid">SSID</string>
    <string name="password">Password</string>
    <string name="generate">Generate</string>
    <string name="empty_ssid">At least enter the SSID</string>
    <string name="missing_password">Did you forget the password?</string>
    <string name="send_through_nfc">NFC</string>
    <string name="make_sure_devices_touch">Make sure devices are touching</string>
    <string name="could_not_detect_barcode">Couldn\'t detect any barcode in the received file</string>
    <string name="enable_hotspot">Enable Hotspot</string>

    <array name="share_files_activity_options">
        <item>Send</item>
        <item>Receive</item>
    </array>
</resources>
