<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:orientation="vertical">

    <Button
        android:id="@+id/share_files_bt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/share_hotspot_nfc_bt"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/share_hotspot_nfc_bt"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:gravity="center"
        android:onClick="onClick"
        android:text="@string/share_files" />

    <Button
        android:id="@+id/share_hotspot_nfc_bt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/share_files_bt"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:gravity="center"
        android:onClick="onClick"
        android:text="@string/share_hotspot_nfc"/>

    <Button
        android:id="@+id/share_hotspot_wifi_bt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/share_hotspot_nfc_bt"
        android:layout_alignRight="@+id/share_hotspot_nfc_bt"
        android:layout_below="@+id/share_hotspot_nfc_bt"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:gravity="center"
        android:onClick="onClick"
        android:text="@string/share_hotspot_wifi"/>



</RelativeLayout>